[tool.poetry]
name = "hollys"
version = "v0.1.0"
description = ""
authors = ["heumsi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynecone-io = "^0.1.13"
kubernetes = "^25.3.0"
tomli = "^2.0.1"
PyMySQL = "^1.0.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pycln = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
